--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
             {% for state in data %}
 
             <tr>
-                <td>Location: {{state['state']}}</td>
-                <td>Cases: {{state['case']}}</td>
-                <td>Deaths: {{state['death']}}</td>
-                <td>Last Updated: {{state['updated']}}</td>
+                <td> {{state['state']}}</td>
+                <td> {{state['case']}}</td>
+                <td> {{state['death']}}</td>
+                <td> {{state['updated']}}</td>
             </tr>
 
             {% endfor %}
