--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
 
 
     <b>
-        <p style='color: #4bb543; margin-left: 300px;'>
+        <p style='color: #ff0033; margin-left: 300px;'>
             {{success_message}}
         </p>
     </b>
